# AI-Noise-Cancelation

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.bat  setup.py  setup.sh
cpp/: CMakeLists.txt
cpp/audio/: audio_device.cpp  audio_processor.cpp
cpp/include/audio/: audio_device.hpp  audio_processor.hpp
cpp/wasm/: audio_bridge.cpp
python/: __init__.py
python/audio/: __init__.py  processor.py
python/gui/: __init__.py  main_window.py
web/: index.html
